--- a/TP2 Knative/function/Dockerfile.function
+++ b/TP2 Knative/function/Dockerfile.function
@@ -8,6 +8,8 @@ WORKDIR /app
 # Install any needed packages specified in requirements.txt
 COPY . .
 RUN pip install --no-cache-dir -r requirements.txt
+RUN apt update && apt install curl
+RUN curl http://database-service
 
 # Run the serverless function when the container launches
-CMD ["python", "serverless_function.py"]
+CMD ["curl", "http://database-service"]
