--- a/TP2 Knative/manifests_for_testing/function.yml
+++ b/TP2 Knative/manifests_for_testing/function.yml
@@ -3,7 +3,6 @@ kind: Deployment
 metadata:
   name: monitor-deployment
 spec:
-  replicas: 1
   selector:
     matchLabels:
       app: monitor
@@ -19,14 +18,6 @@ spec:
             - containerPort: 8080
           env:
             - name: REDIS_HOST
-              value: "redis-database"
+              value: "redis-service"
       imagePullSecrets:
         - name: monitor-docker-registry
-
-
-
-      # # Configures autoscaling based on incoming requests
-      # autoscaling:
-      #   metric:
-      #     type: "podscaled.knative.dev/requests-per-second"
-      #   min
